<resources>
    <string name="app_name">APS - MMA APP</string>
    <string name="login_using_fingerprint">Entrar com a impressão digital</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <!--    <string name="btn_exit">Sair</string>-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">Senha</string>
    <string name="btnRegister">Registrar</string>
    <string name="regText">Não tem conta? Registre-se aqui.</string>
    <string name="digite_o_e_mail_do_usuario">Digite o e-mail do usuário</string>
    <string name="buscar">Buscar</string>
    <string name="btnUsers">Usuários</string>
    <string name="changePermissionDialog">Selecione o novo nível de permissão</string>
    <string name="btnChangePermission">Atualizar Permissão</string>
    <string name="perfilToolbar">Perfil</string>
    <string name="gerenciarPermissoesToolbar">Gerenciar Permissões</string>
    <string name="searchtoolbarbutton">searchToolbarButton</string>
    <string name="voltar_ao_menu">Voltar ao menu</string>
    <string name="btnSairParaLogin">Sair</string>
    <string name="regInfoContent">Registro de informações</string>
    <string name="descContent">Descrição</string>
    <string name="nvlContent">Nível</string>
    <string name="btnSalveContent">Salvar</string>
    <string name="content">TextView</string>
    <string name="showContent">Mostrar</string>
    <string name="contentTitle">Título</string>
    <string name="contentPreviewTitle">Prévia (1 Linha)</string>
    <string name="contentPermissionLevel">Nível de permissão</string>
    <string name="btnSaveContent">Salvar Conteúdo</string>
    <string name="btnAddContent">Adicionar Conteúdo</string>
    <string name="itemAddContent">Adicionar Conteúdo</string>
    <string name="logoutItem">Logout</string>
    <string name="editTextFullContent">Conteúdo Completo</string>
    <string name="nameRegister">Nome</string>
</resources>